--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <title>Crazy Mad Libs</title>
+  <title>Kaden's Mad Libs</title>
 </head>
 
 <body>
